--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "dependencies": {
     "@algolia/autocomplete-js": "^1.1.0",
+    "@babel/preset-react": "^7.13.13",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^3.6.0",
+    "@rails/webpacker": "^5.4.0",
     "algoliasearch": "^4.9.1",
     "autocomplete.js": "^0.38.0",
     "bootstrap": "4.6",
